--- a/Informacion.html
+++ b/Informacion.html
@@ -8,6 +8,37 @@
     <link rel="stylesheet" href="CSS/Informacion.css">
     <link rel="stylesheet" href="CSS/FontAwsome.css">
     <script src="https://kit.fontawesome.com/01a7edaade.js" crossorigin="anonymous"></script>
+    <style>
+        .Color {
+            border: 1px solid black;
+            padding: 20px;
+            display: inline-block;
+            text-align: center;
+        }
+
+        .C5, .B1 {
+            background-color: #57e1fb;
+        }
+
+        .B5, .O1 {
+            background-color: #0097af;
+        }
+
+        .O2 { color: white; background-color: #006f81;}
+        .O3 { color: white; background-color: #004a55;}
+        .O4 { color: white; background-color: #002429;}
+        .O5 { color: white; background-color: #000000;}
+
+        .B2 { background-color: #41cef8;}
+        .B3 { background-color: #2cbcd5;}
+        .B4 { background-color: #16aac2;}
+
+        .C1 {background-color: #ffffff;}
+        .C2 {background-color: #d5f7fe;}
+        .C3 {background-color: #abf0fd;}
+        .C4 {background-color: #80e8fc;}
+
+    </style>
 </head>
 <body>
     <header>
@@ -98,6 +129,30 @@
         <li>Entregar el enlace al repositorio utilizado</li>
         <li>Entregar la lista de integrantes y cualquier comentario adicional que consideren necesario.</li>
     </ul>
+
+    <h1>Caracteristicas de la pagina</h1>
+
+    <h2>Colores</h2>
+    <h3>Colores Claros</h3>
+    <div class="Color C1">#ffffff</div>
+    <div class="Color C2">#d5f7fe</div>
+    <div class="Color C3">#abf0fd</div>
+    <div class="Color C4">#80e8fc</div>
+    <div class="Color C5">#57e1fb</div><br>
+
+    <h3>Colores Base</h3>
+    <div class="Color B1">#57e1fb</div>
+    <div class="Color B2">#41cef8</div>
+    <div class="Color B3">#2cbcd5</div>
+    <div class="Color B4">#16aac2</div>
+    <div class="Color B5">#0097af</div><br>
+
+    <h3>Colores Oscuros</h3>
+    <div class="Color O1">#0097af</div>
+    <div class="Color O2">006f81</div>
+    <div class="Color O3">004a55</div>
+    <div class="Color O4">002429</div>
+    <div class="Color O5">000000</div><br>
 
 </body>
 </html>
