incremento de funciones

--- a/Inicio.html
+++ b/Inicio.html
@@ -39,11 +39,11 @@
             
             <!-- multiples opciones -->
             <label for="genero">Género: </label>
-            <select name="genero" multiple="multiple" id="genero">
+            <select name="genero" id="genero">
                 <option value="hombre">Hombre</option>
                 <option value="mujer">Mujer</option>
                 <option value="NonBI">No Binario</option>
-                <option value="Queer">Otro</option>
+                <option value="Queer" selected>Otro</option>
             </select>
             <br><br>
             
